<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView
        android:id="@+id/textview_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_settings"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/textview_current_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textview_settings"
        android:text="@string/str_current_settints_hint" />

    <TextView
        android:id="@+id/textview_sleep_time_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textview_current_settings"
        android:text="@string/str_sleep_time_tip" />

    <EditText
        android:id="@+id/edittext_sleep_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textview_current_settings"
        android:inputType="numberDecimal"
        android:hint="@string/str_sleep_time_hint"
        android:layout_toRightOf="@+id/textview_sleep_time_tip"
        android:layout_toEndOf="@+id/textview_sleep_time_tip"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textSize="15sp"/>

    <TextView
        android:id="@+id/textview_begin_hour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edittext_sleep_time"
        android:text="@string/str_begin_hour" />

    <EditText
        android:id="@+id/edittext_begin_hour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edittext_sleep_time"
        android:inputType="number"
        android:hint="@string/str_begin_hour_hint"
        android:layout_toRightOf="@+id/textview_begin_hour"
        android:layout_toEndOf="@+id/textview_begin_hour"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textSize="14sp"/>

    <TextView
        android:id="@+id/textview_end_hour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edittext_begin_hour"
        android:text="@string/str_end_hour" />

    <EditText
        android:id="@+id/edittext_end_hour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edittext_begin_hour"
        android:inputType="number"
        android:hint="@string/str_end_hour_hint"
        android:layout_toRightOf="@+id/textview_end_hour"
        android:layout_toEndOf="@+id/textview_end_hour"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textSize="14sp"/>

    <Button
        android:id="@+id/button_apply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edittext_end_hour"
        android:text="@string/str_apply" />

    <Button
        android:id="@+id/button_start_service"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_start_service"
        android:layout_below="@+id/edittext_end_hour"
        android:layout_toRightOf="@+id/button_apply"
        android:layout_toEndOf="@+id/button_apply" />

    <TextView
        android:id="@+id/textview_statistics"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_apply"
        android:text="@string/str_statistics"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/textview_grub_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textview_statistics"
        android:text="@string/str_grub_num_hint" />

    <TextView
        android:id="@+id/textview_help"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textview_grub_num"
        android:text="@string/str_help"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/textview_help_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textview_help"
        android:text="@string/str_help_details" />



</RelativeLayout>
